<resources>
    <string name="app_name">Sale</string>
    <string name="trolley_icon">Trolley Icon</string>
    <string name="start_selling">Start selling</string>
    <string name="contact_number">Contact number...</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_now">Login now</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp_verification">OTP verification</string>
    <string name="we_will_send_you_an_otp_on_you_mobile_number">We will send you an OTP on you mobile number</string>
    <string name="enter_your_otp_sent_to">Enter your OTP sent to </string>
    <string name="_0">0</string>
    <string name="did_not_receive_the_otp">Did not receive the OTP? </string>
    <string name="resend_otp">Resend OTP</string>
    <string name="not_you">Not you?</string>
    <string name="switch_account">Switch account</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>